# Album

./: README.md  meson.build
data/: album.gresource.xml  album.gschema.xml  application.css  meson.build
src/: Application.vala  Application.vala~  MainWindow.vala  MainWindow.vala~  meson.build
src/Widgets/: CancelDeleteToast.vala  DeleteToast.vala  FullscreenViewer.vala  ImageFlowBoxChild.vala  ImageFlowBoxChild.vala~  LocationImages.vala  LocationImages.vala~  LocationsSideBar.vala  PreviewPage.vala  PreviewPage.vala~  SegregatedFlowbox.vala  SegregatedFlowbox.vala~  SettingPopover.vala  Sorter.vala  ThumbnailPaintable.vala  TransitionStack.vala  TransitionStack.vala~
src/Widgets/FolderImagesOverview/: DateSortingBox.vala  FolderImagesOverview.vala
src/Widgets/FullScreenView/: FullScreenViewer.vala
src/Widgets/PreviewView/: MetaDataBox.vala  MetaDataSideBar.vala  PictureView.vala  PictureWidget.vala  PreviewHeader.vala  PreviewScroller.vala  PreviewView.vala
src/Widgets/PreviewView/Controls/: ControlsBox.vala  Rotate.vala  Zoom.vala
